--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ build-backend = "setuptools.build_meta"
 name = "prodige_core"
 dependencies = [
   "astropy>=5.0",
+  "matplotlib>=3.6"
 ]
 requires-python = ">=3.7"
 authors = [
