--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,27 +1,15 @@
 name: CI
 
-on: 
-  push:
-    branches:
-      - master
-  pull_request:
-    branches:
-      - master
+on: [push]
 
 jobs:
   run-tests:
     strategy:
       fail-fast: false
-         # node-version: [12.x]
+      
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
-        python-version: 
-        - "3.7"
-        - "3.8"
-        - "3.9"
-        - "3.10"
-        - "3.11"
-        - "3.12-dev"
+        python-version: ["3.7", "3.8", "3.9", "3.10", "3.11", "3.12-dev"]
     
     name: Test 
     runs-on: ${{ matrix.os }}
@@ -30,16 +18,19 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v3
 
-    - name: Setup Python
-      uses: actions/setup-python@v4 
+    - name: Set up Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v5
       with:
         python-version: ${{ matrix.python-version }} 
     
     - name: Install dependencies
-      run: python -m pip install --upgrade pip |
-        pip install pytest .  |
+      run: |
+        python -m pip install --upgrade pip 
+        pip install pytest 
         pip install -r requirements.txt
 
-    - name: Run tests
-      run: pytest
+    - name: Run tests with pytest
+      run: |
+        pip install pytest pytest-cov
+        pytest tests.py --doctest-modules --junitxml=junit/test-results.xml --cov=com --cov-report=xml --cov-report=html
  
