--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -9,14 +9,14 @@ jobs:
       
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
-        python-version: ["3.7", "3.8", "3.9", "3.10", "3.11", "3.12-dev"]
+        python-version: ["3.11"] #["3.7", "3.8", "3.9", "3.10", "3.11", "3.12-dev"]
     
     name: Test 
     runs-on: ${{ matrix.os }}
 
     steps:
     - name: Checkout code
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
 
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v5
@@ -27,7 +27,6 @@ jobs:
       run: |
         python -m pip install --upgrade pip 
         pip install pytest 
-        pip install -r requirements.txt
 
     - name: Run tests with pytest
       run: |
