--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -32,5 +32,5 @@ jobs:
     - name: Run tests with pytest
       run: |
         pip install pytest pytest-cov
-        pytest --pyargs prodige_core --doctest-modules --junitxml=junit/test-results.xml --cov=com --cov-report=xml --cov-report=html
+        pytest --pyargs prodige_core --import-mode=importlib --doctest-modules --junitxml=junit/test-results.xml --cov=prodige_core --cov-report=xml --cov-report=html
  
