--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -26,11 +26,22 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip 
-        pip install pytest 
         pip install .
 
     - name: Run tests with pytest
       run: |
         pip install pytest pytest-cov
         pytest --pyargs prodige_core --import-mode=importlib --doctest-modules --junitxml=junit/test-results.xml --cov=prodige_core --cov-report=xml --cov-report=html
- 
+
+    - name: Code Coverage Report
+      uses: irongut/CodeCoverageSummary@v1.3.0
+      with:
+        file: junit/test-results.xml
+        badge: true
+        fail_below_min: false
+        format: markdown
+        hide_branch_rate: false
+        hide_complexity: true
+        indicators: true
+        output: both
+        thresholds: '60 80'
