format and GitHub coverage ' -changed formatting of pyton files using black -modified CI file to improve coverage report '

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,8 +39,8 @@ source = ["prodige_core"]
 [tool.pytest.ini_options]
 pythonpath = "src/"
 addopts = [
-    "--import-mode=importlib",
-    "--cov=prodige_core --cov-report html"
+    "--import-mode=importlib"#,
+    # "--cov=prodige_core --cov-report html"
     ]
 
 [tool.coverage.report]
