--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -31,7 +31,7 @@ jobs:
     - name: Run tests with pytest
       run: |
         pip install pytest pytest-cov
-        pytest --pyargs prodige_core --import-mode=importlib --doctest-modules --junitxml=junit/test-results.xml --cov=prodige_core --cov-report=xml --cov-report=html
+        pytest --pyargs prodige_core --import-mode=importlib --doctest-modules --junitxml=junit/test-results.xml --cov=prodige_core --cov-report=xml
 
     - name: Code Coverage Report
       uses: irongut/CodeCoverageSummary@v1.3.0
