--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "prodige_core"
 dependencies = [
+  "importlib-resources;python_version<'3.9'",
   "astropy>=5.0",
   "matplotlib>=3.6"
 ]
