--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -20,7 +20,7 @@ jobs:
 
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v5
-      with:
+      with: |
         python-version: ${{ matrix.python-version }}
         python -m pip install --upgrade pip 
     
