--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -6,6 +6,10 @@
 version: 2
 updates:
   - package-ecosystem: "github-actions" # See documentation for possible values
-    directory: "/" # Location of package manifests
+    directory: ".github/workflows" # Location of package manifests
     schedule:
       interval: "weekly"
+    groups:
+      actions:
+        patterns:
+          - "*" # Update all actions
