--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ license = {text = "MIT License"}
 dynamic = ["version"]
 
 [tool.setuptools_scm]
+version_file = "src/prodige_core/_version.py"
 
 [tool.setuptools]
 include-package-data = true
