--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -30,6 +30,10 @@ jobs:
         python -m pip install --upgrade pip 
         pip install .
 
+    - name: Install LaTeX
+      - uses: r-lib/actions/setup-tinytex@v2
+      - run: tlmgr --version
+
     - name: Run tests with pytest
     # pytest --pyargs prodige_core --cov=prodige_core --import-mode=importlib --junitxml=pytest.xml  --cov-report=xml | tee pytest-coverage.txt
       run: |
