--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -6,42 +6,41 @@ jobs:
   run-tests:
     strategy:
       fail-fast: false
-      
+
       matrix:
         # os: [ubuntu-latest, windows-latest, macos-latest]
         # Cannot use windows-latest, because LaTeX is missing
         os: [ubuntu-latest, macos-latest]
         python-version: ["3.8", "3.9", "3.10", "3.11", "3.12", "3.13-dev"]
-    
-    name: Test 
+
+    name: Test
     runs-on: ${{ matrix.os }}
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v5
-      with: 
-        python-version: ${{ matrix.python-version }}
-    
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip 
-        pip install .
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v5
+        with:
+          python-version: ${{ matrix.python-version }}
 
-    - name: Install LaTeX
-      - uses: r-lib/actions/setup-tinytex@v2
-      - run: tlmgr --version
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip 
+          pip install .
 
-    - name: Run tests with pytest
-    # pytest --pyargs prodige_core --cov=prodige_core --import-mode=importlib --junitxml=pytest.xml  --cov-report=xml | tee pytest-coverage.txt
-      run: |
-        pip install pytest pytest-cov
-        pytest --cov --cov-branch --cov-report=xml
+      - name: Install LaTeX
+        uses: r-lib/actions/setup-tinytex@v2
+        run: tlmgr --version
 
-    - name: Upload coverage reports to Codecov
-      uses: codecov/codecov-action@v5
-      with:
-        token: ${{ secrets.CODECOV_TOKEN }}
+      - name: Run tests with pytest
+        # pytest --pyargs prodige_core --cov=prodige_core --import-mode=importlib --junitxml=pytest.xml  --cov-report=xml | tee pytest-coverage.txt
+        run: |
+          pip install pytest pytest-cov
+          pytest --cov --cov-branch --cov-report=xml
 
+      - name: Upload coverage reports to Codecov
+        uses: codecov/codecov-action@v5
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
