--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -32,6 +32,8 @@ jobs:
 
       - name: Install LaTeX
         uses: r-lib/actions/setup-tinytex@v2
+
+      - name: Install Font LaTeX
         run: |
           tlmgr install type1cm
 
