--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -35,7 +35,7 @@ jobs:
 
       - name: Install Font LaTeX
         run: |
-          tlmgr install type1cm cm-super texlive-latex-recommended
+          tlmgr install type1cm cm-super underscore
 
       - name: Run tests with pytest
         # pytest --pyargs prodige_core --cov=prodige_core --import-mode=importlib --junitxml=pytest.xml  --cov-report=xml | tee pytest-coverage.txt
