--- a/pyproject.toml
+++ b/pyproject.toml
@@ -61,9 +61,8 @@ source = ["prodige_core"]
 
 [tool.pytest.ini_options]
 pythonpath = "src/"
-addopts = [
-    "--import-mode=importlib"#,
-    ]
+addopts = ["--import-mode=importlib", "--ignore=src/prodige_core/_version.py"]
+
 
 [tool.coverage.report]
 exclude_lines = [
