--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -27,6 +27,13 @@ jobs:
           elif [[ "$RUNNER_OS" == "macOS" ]]; then
             brew install gcc
           fi
+      - name: Install OpenBLAS (macOS only)
+        run: |
+          if [[ "$RUNNER_OS" == "Linux" ]]; then
+            sudo apt-get install -y libopenblas-dev
+          elif [[ "$RUNNER_OS" == "macOS" ]]; then
+            brew install openblas
+          fi
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v5
         with:
